lab1/Test/L1-A-12-15.output
Error Type A at Line 3
Error Type B at Line 8
Error Type A at Line 13
Error Type A at Line 17
Error Type A at Line 18
Error Type B at Line 24
Error Type B at Line 32
Error Type A at Line 44
