lab1/Test/L1-A-12-15.cmm
float ;
struct bsuIfRZrgVftlwNIdtDd s05l , jSR79 [ 1319760126 
  ] \

;
int zOIDcQVxCwbta3zYjj ( ) {
}
int DvIljEoGa4PVh44V ( int , int d ) {
  if ( zXNv5nB6R66r3y )   o6cza59bYpB ;
else {
    struct _YhxdagJt2Am4Sk {
      struct DvfS7RxXJOh_7 geXGoWQVZzgLH ;
      int q3nBpwETySOWE2y ~;
    }ppLViZ6hW89K2DX ;
    int dYDcdM ;
    int bGvqFna ;
    int Pus8grNQ :;
  }%
}
struct {
  int nzTyP = a5QXH89whYJvgEMO3pOp = OV1l0Vlakixe0U4JHnb 
    || Hjp2KGHxUJYiGTa3i > AeR2k_ZKWXC4d9 - ! - vgs2i7VCvlXfdB96 
    [ OF_FkrBJRDGWgpncv && YtQPx != V * DyIcuEQB2Jvh7 
    ( aQ0 || < WIHeq3yfVpk + DVwj ( XAgzCPDd87f92RL , 
    YvtZ3fawimSZFriKuHg == ghzlVq - ( IGJtmlzWgaGXsaNP 
    = JLqo09VBB3YZ2BgAm = Wsr5prKh_rzrrj7kSwRf <= ojIKWWFbl 
    - ! ( e4XlhhJbNIS >= y_jUCQfaJ6t2YPrqQ ) && WTmLz 
    / VjnBq ) * ! 1339113124.2005169480 ) - 1187978283 
    . wUiBCWXLf5M + - O4t ( ) ) . XIR8dt9Vxiyr ] / Z6qmPcQNI 
    , cb9OkJAwkpVZ ;
};
;
int ;
int ;
int ;
int zSJ8MCUF0cHS ( ) {
  if ( Srz )   DQUa_IKKZrOkspzT40T ;
else   if ( s )   while ( JYSKPCtDZ_jEjKcWr8 )   return 
    TGEpdz9vVXN2 ;



}
`